--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -6,6 +6,8 @@
   <title>aartics_resonateai</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
+  <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
 </head>
 
@@ -17,77 +19,94 @@
     <a href="http://www.aartics.com">aartics.com</a>
     </div>
     <span class="project-name">
-      project: resonate.ai
+      <a href="#cover">project: resonate.ai</a>
     </span>
   </div>
 </div>
 <div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
 </div>
-<div id="project-content">
-  <div class="image-title">
-  Resonate.ai - Before
-  </div>
-  <img src="local_img/res_before_01.png">
-  <div class="image-title">
-  Resonate.ai - After
-  </div>
-  <img src="local_img/res_after_01.png">
 
-  <div class="image-title">
-  Market Research<br>
-  <h2>Competitive and Comparative Analysis</h2>
-  <p>Studied current competitors, inline text editors and document composers. Also studied MailChimp's product voice and tone guide.</p>
-  <p>Outcomes: Cleaner visualization of an inline text editor, idea of delightful interaction including clear tonality guide, and Key features needed for the product.</p>
+<div id="contents">
+<h2>Content:</h2>
+  <ul>
+    <li><a href="#bef">Resonate.ai - Before and After</a></li>
+    <li><a href="#comp">Competitive and Comparative Analyses</a></li>
+    <li><a href="#pers">Personas</a></li>
+    <li><a href="#usab">Usability testing with paper prototype</a></li>
+    <li><a href="#tone">Restructuring tonality</a></li>
+    <li><a href="#more">More prototyping</a></li>
+    <li><a href="#vide">Product mockup video</a></li>
+    <li><a href="#maps">Feature and User Flow Map</a></li>
+    <li><a href="xel">Product Roadmap</a></li>
+  </ul>
+</div>
+<div id="project-content">
+  <div class="image-title" id="bef">
+    Resonate.ai - Before:
   </div>
-  <img src="local_img/resonate_comp_analysis.png">
+  <img src="local_img/res_before_01.png" width=80%/>
+  <div class="image-title" id="aft">  
+    Resonate.ai - After:
+  </div>
+    <img src="local_img/res_after_01.png" width=80%/>
+  <div class="image-title" id="comp">
+    Competitive and Comparative Analysis
+  <p><br>Studied current competitors, inline text editors and document composers. <br></p>
+  </div>
+  <img src="local_img/resonate_comp_analysis.png" width=80%/>
+  
   <div class="image-title">
+    Voice and Tone Branding Study
+    <p><br>Our customer described Resonate.ai's brand as a woman like Scarlett Johannsen, so we started putting together Resonate.ai's Possible Voice and Tone Attributes. We got early insights from MailChimp's Product Voice and Tone guide.</p>
+  </div>
+    <img src="local_img/res_mailchimp.png" width=60%/>  
+
+  <div class="image-title" id="pers">
   Personas
   <p><br>Developed key personas for members of a financial startup and identified their habits, goals, and needs.</p>
   </div>
-  <img src="local_img/res_user_personas.png">
+  <img src="local_img/res_user_personas.png" width=60%>
 
-  <div class="image-title">
-  User testing with paper prototype
-  <p><br>Quick paper prototype was used in early usability testing, leading to identification of new features and clear prioritization among them. <br><br> This also led us to research on simplifying the tonality.</p>
+  <div class="image-title" id="usab">
+  Usability testing with paper prototype
+  <p><br>Quick paper prototype was used in early usability testing. This helped us identify and priortize necessary features. This also led us to research more on simplifying the tonal classes.</p>
   </div>
-  <img src="local_img/resonate_paper_prototype.jpg">
+  <img src="local_img/resonate_paper_prototype.jpg" width=60%>
 
 
-  <div class="image-title">
+  <div class="image-title" id="tone">
   Restructuring tonality:
-  <p><br>User research led us to remove  non measurable tones like "joy", "anticipation", and "popularity" from the previous list. Simplified the classes, classified it under 'Persuation' and 'Moments'. <br> <br>Final product scored users on "Trust", "Confidence", and "Likability", leading to better resonance with the audience.</p>
+  <p><br>User research led us to remove non measurable tones like "joy", "anticipation", and "popularity" from the previous list. Simplified the classes, classified it under 'Persuation' and 'Moments'. <br> <br>Final product scored users on "Trust", "Confidence", and "Likability", leading to better resonance with the audience.</p>
 
   </div>
-  <img src="local_img/res_structural_change.png">
+  <img src="local_img/res_structural_change.png" width=60%>
 
 
-  <div class="image-title">
+  <div class="image-title" id="more">
   More prototyping
-  <h2>Clickable slide-based prototypes for gathering feedback</h2>
+  <p></br>Clickable slide-based prototypes helped gathering feedback and effectively communicating functional design details to the client.</h2></p>
   </div>
-  <img src="local_img/res_more_prototyping.png">
+  <img src="local_img/res_more_prototyping.png" width=60%>
 
-  <div class="image-title">
-  Product mockup
+  <div class="image-title" id="#vide">
+  Product mockup video
   </div> 
   <video width="740" height="600" autoplay controls loop>
     <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_editor_final.mp4" type="video/mp4">
   </video>
   
-  <div class="image-title">
+  <div class="image-title" id="maps">
   Feature and User Flow Map
-<!--   <h2>Feature and User flow Map</h2> -->
   <p> <br>Additionally, I generated 'user flow' map for developers to easily understand the complete product flows and scope the development efforts requried in engineering the product.</p>
   </div> 
-  <img src="local_img/resonate_structural_flows.png">
+  <img src="local_img/resonate_structural_flows.png" width=80%>
 
-  <div class="image-title">
-  Product Roadmap 
-  <!--<h2> Product Roadmap</h2>-->
-  <p> Additionally synthesized the complete research and ideas into a phase-wise product roadmap. This included creation of an clear vision and feature plan for an Enterprise version for the startup product.</p>
+  <div class="image-title" id="xel">
+  Product Roadmap
+  <p><br>Synthesized the complete research and ideas into a phase-wise product roadmap. This included creation of an clear vision and feature plan for an Enterprise version for the startup product.</p>
   </div> 
-  <img src="local_img/resonate_product_roadmap.png">
+  <img src="local_img/resonate_product_roadmap.png" width=80%>
 </div>
 
 
