--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -6,6 +6,8 @@
   <title>aartics_sfac</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
+  <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
 </head>
 
@@ -17,7 +19,7 @@
     <a href="http://www.aartics.com">aartics.com</a>
     </div>
     <span class="project-name">
-      project: public voting kiosk for sfac
+      <a href="#cover">project: public voting kiosk for sfac</a>
     </span>
   </div>
 </div>
@@ -25,15 +27,29 @@
 <div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
 </div>
-  
+
+<div id="contents">
+<h2>Content:</h2>
+  <ul>
+    <li><a href="#bef">Project brief from SFAC</a></li>
+    <li><a href="#solv">Solution</a></li>
+    <li><a href="#survey">Survey</a></li>
+    <li><a href="#comp">Competitive and Comparative Analyses</a></li>
+    <li><a href="#pers">Personas</a></li>
+    <li><a href="#prot">Rapid Prototypes</a></li>
+    <li><a href="#more">Mockups</a></li>
+    <li><a href="#vide">Product mockup video</a></li>
+  </ul>
+</div>
+
 <div id="project-content">
 
-  <div class="image-title">
-    San Francisco Arts Commission
-    <p><br>The SF Arts Commission is the city council that champions the arts. Through art education programs, street activation initiatives, public art work, grant funded performances and more, the SFAC acts as a catalyst for life-changing experiences for the citizens and tourists of one of the most beautiful cities in the world.</p>
-    <h2>Citizens connect with the public art commissioned by SFAC for several intentions:</h2>
-    <img src="local_img/sfac_citizen_intention.png" width="80%"/>
+  <div class="image-title" id="bef">
+    Project Brief: San Francisco Arts Commission
+    <p><br>Citizens connect with the public art commissioned by SFAC for several intentions, as shown below. The SF Arts Commission is the city council that champions the arts. Through art education programs, street activation initiatives, public art work, grant funded performances and more, the SFAC acts as a catalyst for life-changing experiences for the citizens and tourists of one of the most beautiful cities in the world.</p>
   </div>
+    <img src="local_img/sfac_citizen_intention.png" width="60%"/>
+
   <div class="image-title">
     Our Mission
     <p><br>The SFAC is looking to be much more transparent in it's plans for public art, and wants to engage the city's inhabitants to help prioritize what it invests in.</p>
@@ -41,11 +57,14 @@
     <img src="local_img/sfac_pain_points.png" width="80%"/>
   </div>
 
-  <div class="image-title">
+  <div class="image-title" id="solv">
     Our Proposed Solution
     <p><br>We modeled designs for an accessible turnable public voting kiosk which can hold a digital touch device like an iPad which as a public option polling application. These kiosks are located in public spaces in the city where citizens pause.</p>
     <img src="local_img/sfac_design_solution.png"/>
-    Video of voting application prototype:
+  </div>
+
+  <div class="image-title" id="#vide">
+    <h4>Video of voting application prototype:</h4>
     <video width="740" height="600" autoplay controls loop>
       <source src="local_img/aartics_sfac_votingapp.mp4" type="video/mp4">
     </video>
@@ -53,65 +72,61 @@
   
   <div class="image-title">
   Arriving at a Strategy
-  <p><br>From our research and collaborative design process, we realized that the best way to engage public participation is by intervening seamlessly in public spaces where citizens might pause.</p>
-  <h2> Since citizens interface with the city at several touchpoints like public areas, this gives SFAC more opportunities to connect with people to anonymously vote for at while they pass by or wait...</h2>
-  <img src="local_img/sfac_citizen_enagement.png" width="80%"/>
+  <p><br>From our research and collaborative design process, we realized that the best way to engage public participation is by intervening seamlessly in public spaces where citizens might pause. Since citizens interface with the city at several touchpoints like public areas, this gives SFAC more opportunities to connect with people to anonymously vote for at while they pass by or wait.
   </div>
+  <img src="local_img/sfac_citizen_enagement.png" width="60%"/>
 
-  <div class="image-title">
+  <div class="image-title" id="survey">
     Research for Design:<br>
     <p><br>Our design proposal is based on user research, competitive and comparitive analyses. Our design hypotheses and solution statements were born of surveys, interviews and prototypes, which are described here.</p>
-    <h2><a href="" target="_blank">Click here to take the survey</a></h2>
-    <img src="local_img/sfac_survey.png">
-    <br>
-  </div>
-  <div class="image-title">
+    <img src="local_img/sfac_survey.png" width="80%">
+    <p><br></p>
     Results from the survey:
-    <h2>The survey showed diverse and divided opinion about the public art, with citizens expressing views such as:</h2>
+    <p><br>The survey showed diverse and divided opinion about the public art, with citizens expressing views such as:</p>
     <p class="quotes"><br>“While $400K sounds like a lot of money, it's probably a drop in the bucket of the whole project. I don't think that the citizens will "benefit", but perhaps they'll ENJOY it.”</p>
     <p class="quotes"><br>“Not sure. I love public art but we might need that money for more pressing social justice causes.”</p>
     <p class="quotes"><br>“For $ 400,000 does this art include a building??”</p>
   </div>
-  <div class="image-title">
+  <div class="image-title" id="comp">
     Competitive Analysis
     <p><br>We used a heuristic framework to study the websites and processes of other city council bodies from the Bay Area to learn more about how we can improve SFAC's presence</p>
-    <img src="local_img/sfac_competitive.png"/>
+    <img src="local_img/sfac_competitive.png" width="80%"/>
   </div>
   <div class="image-title">
     Comparative Analysis
     <p><br>We took inspiration from physical as well as digital applications for ideation</p>
-    <img src="local_img/sfac_comparative.png"/>
+    <img src="local_img/sfac_comparative.png" width="80%"/>
   </div>  
-  <div class="image-title">
+  <div class="image-title" id="pers">
     Personas
-    <p><br>Representing all the citizens of San Francisco was a difficult task, but we mapped the survey and interview candidates to 3 pseudo-personas</p>
-    <img src="local_img/sfac_personas.png"/>
+    <p><br></p>
+    <img src="local_img/sfac_personas.png" width="80%"/>
   </div>
-  <div class="image-title">
-    Cardboard Prototypes for User testing
+  <div class="image-title" id="#prot">
+    Cardboard Prototypes for Usability testing
     <p><br>We made prototypes of cardboard and paper, which aided us in illiciting feedback from several users. This helped us rapidly go through several design iterations for the flow and features of the product</p>
-    <img src="local_img/sfac_team_prototyping.png"/>
+    <img src="local_img/sfac_team_prototyping.png" width="80%"/>
   </div>
 
   <div class="image-title">
-    Video of User Feedback for rapid prototypes:
+    <h4>Video of User Feedback for rapid prototypes:</h4>
     <video width="740" height="600" controls>
     <source src="local_img/sfac_feedback.mp4" type="video/mp4">
   </video>
   </div>
-  <div class="image-title">
+  <div class="image-title" id="forum">
     Wireframes for website extension - SFAC Forum
     <p><br>We also presented wireframes and clickable prototypes for the "SFAC Forum" - an addition to the SFAC website which will allow users to share opinions and have a moderated discussion about public arts and performances on the website</p>
     <img src="local_img/sfac_website_wireframes.png"/>
   </div>
   <div class="image-title">
     High Fidelity Mockup of webpage
-    <p><br>We used the wireframes and created the high fidelity mockup for the voting and discussion page</p>
+    <p><br></p>
     <img src="local_img/sfac_forum.png" width=80%/>
   </div>
-  <div class="image-title">
-    High Fidelity Mockups of tablet screens
-    <p><br>The design for the webpage relates closely to the experience of the public polling application on the kiosk tablets</p>
+  <div class="image-title" id="more">
+    Mockups of tablet screens
+    <p><br></p>
     <img src="local_img/sfac_tablet_mockups.png"/>
   </div>
   
