--- a/aartics/projects/barcelona/index.htm
+++ b/aartics/projects/barcelona/index.htm
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>aartics_barcelona</title>
+  <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
