--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -6,6 +6,8 @@
   <title>aartics_graphics</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
+  <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
 </head>
 
