--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -70,14 +70,14 @@
             <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
             <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
             <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
-            <g id="github_box" data-attach="#_48" class="attached raleway">
+            <g id="resume_box" data-attach="#_48" class="attached raleway">
                 <polygon id="_48" data-name="48" class="cls-2 project_box_soft has_link" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
-                <text x="2000" y="610" data-x-rel="-130" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">github</a></text>
+                <text x="2000" y="605" data-x-rel="-140" id="resumelink" class="projectname"><a href="aartics_resume.pdf" target="_blank">resume</a></text>
             </g>
             <polygon id="s67" class="cls-1" points="2716.5 455.5 2809.5 468.5 2718.5 468.5 2628.5 455.5 2716.5 455.5"/>
-            <g id="resume_box" data-attach="#_51" class="attached raleway">    
+            <g id="github_box" data-attach="#_51" class="attached raleway">    
                 <polygon id="_51" data-name="51" class="cls-2 project_box_soft has_link" points="2615.05 50.5 2520.95 50.5 2473.89 132 2520.95 213.5 2615.05 213.5 2662.11 132 2615.05 50.5"/>
-                <text x="2000" y="170" data-x-rel="-130" id="resumelink" class="projectname"><a href="aartics_resume.pdf" target="_blank">resume</a></text>
+                <text x="2000" y="170" data-x-rel="-140" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">my github</a></text>
             </g>
             <polygon id="s87" class="cls-1" points="2386.5 317.5 2426.5 255.5 2765.5 167.5 2705.5 272.5 2386.5 317.5"/>
             <polygon id="s90" class="cls-1" points="2498.5 255.5 2590.5 222.5 2635.5 300.5 2535.5 317.5 2498.5 255.5"/>
@@ -254,7 +254,7 @@
                 <clipPath id="clipPath_3d_box">
                     <polygon points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
                 </clipPath>
-                <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="../img/3d_intro.png" class="image" id="3dimg"/>
+                <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="img/intro_proto.png" class="image" id="3dimg"/>
                 <polygon id="_3" data-name="3" class="cls-2 project_box has_link" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
                 <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_concept" target="_blank">making</a></text>
                 <text x="620" y="575" data-x-rel="-100" id="3d10" class="projectname"><a href="projects/aartics_concept" target="_blank">a 3D +</a></text>
@@ -297,7 +297,7 @@
                 <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
                 <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf" target="_blank">| &nbsp; &nbsp; resume</a></text>
-                <text x="423" y="675" data-x-rel="-299" id="scrolldown" class="traleway">scroll down to explore</text>
+                <text x="303" y="675" data-x-rel="-420" id="scrolldown" class="traleway">scroll down to explore</text>
 <!--                 <text x="455" y="660" data-x-rel="-268" id="arrow">&#x21E3;<text>
  -->            </g>
 
@@ -363,21 +363,21 @@
 
             <g id="credits_box" data-attach="#c1" class="attached">
                 <polygon id="c1" class="cls-2" points="3292.5 378.97 3143.56 636.95 2845.22 636.57 2695.84 378.78 2845.22 121 3143.56 121 3292.5 378.97"/>
-                <text x="3000" y="280" data-x-rel="-500" id="credits13" class="credits">ARTICLE:</text>
-                <text x="3000" y="305" data-x-rel="-500" id="credits11" class="creditsa">prototyping 3D</text>
-                <text x="3000" y="325" data-x-rel="-500" id="credits12" class="creditsa">in a browser</text>
-                <text x="3000" y="355" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
-                <text x="3000" y="375" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
-                <text x="3000" y="395" data-x-rel="-500" id="credits1" class="credits">-------------------------------------</text>
-                <text x="3000" y="415" data-x-rel="-470" id="credits2" class="credits">sketchup 3D</text>
-                <text x="3000" y="435" data-x-rel="-470" id="credits3" class="credits">photoshop | illustrator</text>
-                <text x="3000" y="455" data-x-rel="-470" id="credits4" class="credits">html | css</text>
-                <text x="3000" y="475" data-x-rel="-470" id="credits5" class="credits">javascript </text>
-                <text x="3000" y="495" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
-                <text x="3000" y="515" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
-                <text x="3000" y="535" data-x-rel="-470" id="credits9" class="credits">special shout-out to @owings1</text>
-                <text x="3000" y="555" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
-                <text x="3000" y="575" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
+                <text x="3000" y="270" data-x-rel="-500" id="credits13" class="credits">ARTICLE:</text>
+                <text x="3000" y="295" data-x-rel="-500" id="credits11" class="creditsa"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">prototyping 3D</a></text>
+                <text x="3000" y="315" data-x-rel="-500" id="credits12" class="creditsa"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">in 2D</a></text>
+                <text x="3000" y="345" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
+                <text x="3000" y="365" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
+                <text x="3000" y="385" data-x-rel="-500" id="credits1" class="credits">-------------------------------------</text>
+                <text x="3000" y="405" data-x-rel="-470" id="credits2" class="credits">sketchup</text>
+                <text x="3000" y="425" data-x-rel="-470" id="credits3" class="credits">photoshop | illustrator</text>
+                <text x="3000" y="445" data-x-rel="-470" id="credits4" class="credits">html | css</text>
+                <text x="3000" y="465" data-x-rel="-470" id="credits5" class="credits">javascript </text>
+                <text x="3000" y="485" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
+                <text x="3000" y="505" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
+                <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to @owings1</text>
+                <text x="3000" y="545" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
+                <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
             </g> 
 <!--             <polygon id="bee2" class="cls-4" points="739.75 531.5 733.6 506.22 729.5 515.1 734.28 495.97 739.75 489.82 745.22 495.97 750 512.37 743.85 506.22 739.75 531.5"/>            <defs> -->
             <defs>
