css fixes for projects

--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -7,7 +7,7 @@
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
 </head>
 
