--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -43,51 +43,47 @@
 </div>
 <div id="project-content">
   <div class="image-title" id="bef">
-    Resonate.ai - Before:
-  </div>
-  <img src="local_img/res_before_01.png" width=80%/>
-  <div class="image-title" id="aft">  
-    Resonate.ai - After:
-  </div>
+    <h4>Resonate.ai - Before:</h4>
+    <img src="local_img/res_before_01.png" width=80%/>
+    <h4>Resonate.ai - After:</h4>
     <img src="local_img/res_after_01.png" width=80%/>
+  </div>
   <div class="image-title" id="comp">
     Competitive and Comparative Analysis
   <p><br>Studied current competitors, inline text editors and document composers. <br></p>
-  </div>
   <img src="local_img/resonate_comp_analysis.png" width=80%/>
+  </div>
   
   <div class="image-title">
     Voice and Tone Branding Study
     <p><br>Our customer described Resonate.ai's brand as a woman like Scarlett Johannsen, so we started putting together Resonate.ai's Possible Voice and Tone Attributes. We got early insights from MailChimp's Product Voice and Tone guide.</p>
+    <img src="local_img/res_mailchimp.png" width=80%/>  
   </div>
-    <img src="local_img/res_mailchimp.png" width=60%/>  
 
   <div class="image-title" id="pers">
   Personas
   <p><br>Developed key personas for members of a financial startup and identified their habits, goals, and needs.</p>
+  <img src="local_img/res_user_personas.png" width=80%>
   </div>
-  <img src="local_img/res_user_personas.png" width=60%>
 
   <div class="image-title" id="usab">
   Usability testing with paper prototype
   <p><br>Quick paper prototype was used in early usability testing. This helped us identify and priortize necessary features. This also led us to research more on simplifying the tonal classes.</p>
   </div>
-  <img src="local_img/resonate_paper_prototype.jpg" width=60%>
-
+  <img src="local_img/resonate_paper_prototype.jpg" width=80%>
 
   <div class="image-title" id="tone">
   Restructuring tonality:
   <p><br>User research led us to remove non measurable tones like "joy", "anticipation", and "popularity" from the previous list. Simplified the classes, classified it under 'Persuation' and 'Moments'. <br> <br>Final product scored users on "Trust", "Confidence", and "Likability", leading to better resonance with the audience.</p>
-
+  <img src="local_img/res_structural_change.png" width=80%>
   </div>
-  <img src="local_img/res_structural_change.png" width=60%>
 
 
   <div class="image-title" id="more">
   More prototyping
   <p></br>Clickable slide-based prototypes helped gathering feedback and effectively communicating functional design details to the client.</h2></p>
+  <img src="local_img/res_more_prototyping.png" width=80%>
   </div>
-  <img src="local_img/res_more_prototyping.png" width=60%>
 
   <div class="image-title" id="#vide">
   Product mockup video
@@ -99,14 +95,14 @@
   <div class="image-title" id="maps">
   Feature and User Flow Map
   <p> <br>Additionally, I generated 'user flow' map for developers to easily understand the complete product flows and scope the development efforts requried in engineering the product.</p>
-  </div> 
   <img src="local_img/resonate_structural_flows.png" width=80%>
+  </div> 
 
   <div class="image-title" id="xel">
   Product Roadmap
   <p><br>Synthesized the complete research and ideas into a phase-wise product roadmap. This included creation of an clear vision and feature plan for an Enterprise version for the startup product.</p>
-  </div> 
   <img src="local_img/resonate_product_roadmap.png" width=80%>
+  </div> 
 </div>
 
 
