--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -256,12 +256,12 @@
                 </clipPath>
                 <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="img/intro_proto.png" class="image" id="3dimg"/>
                 <polygon id="_3" data-name="3" class="cls-2 project_box has_link" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
-                <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_concept">making</a></text>
-                <text x="620" y="575" data-x-rel="-100" id="3d10" class="projectname"><a href="projects/aartics_concept">a 3D +</a></text>
-                <text x="500" y="605" data-x-rel="-230" id="3d11" class="projectname"><a href="projects/aartics_concept">hexagonal</a></text>
-                <text x="602" y="605" data-x-rel="-120" id="3d12" class="projectname"><a href="projects/aartics_concept">panaromic</a></text>
-                <text x="500" y="635" data-x-rel="-170" id="3d13" class="projectname"><a href="projects/aartics_concept"></a></text>
-                <text x="587" y="635" data-x-rel="-135" id="3d14" class="projectname"><a href="projects/aartics_concept">website</a></text>
+                <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_story">making</a></text>
+                <text x="620" y="575" data-x-rel="-100" id="3d10" class="projectname"><a href="projects/aartics_story">a 3D +</a></text>
+                <text x="500" y="605" data-x-rel="-230" id="3d11" class="projectname"><a href="projects/aartics_story">hexagonal</a></text>
+                <text x="602" y="605" data-x-rel="-120" id="3d12" class="projectname"><a href="projects/aartics_story">panaromic</a></text>
+                <text x="500" y="635" data-x-rel="-170" id="3d13" class="projectname"><a href="projects/aartics_story"></a></text>
+                <text x="587" y="635" data-x-rel="-135" id="3d14" class="projectname"><a href="projects/aartics_story">website</a></text>
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
                 <polygon id="_24" data-name="24" class="cls-2" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
@@ -375,7 +375,7 @@
                 <text x="3000" y="465" data-x-rel="-470" id="credits5" class="credits">javascript </text>
                 <text x="3000" y="485" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
                 <text x="3000" y="505" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
-                <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to @owings1</text>
+                <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to <a href="https://github.com/owings1">@owings1</a></text>
                 <text x="3000" y="545" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
                 <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
             </g> 
