readme story updated

--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -42,7 +42,7 @@
 
   <div class="image-title" id="intro">
     Project: aartics_portfolio
-    <p><br>For my design portfolio <a href="https://www.aartics.com" target="_blank"> aartics.com </a>I undertook making a 3D representation of a gallery of my projects, viewed as if in a VR world. The files and code used for developing are available on GitHub. These are screenshots of the <a href="../aartics_concept/">wireframe</a> and the current prototype website aartics.com.</p>
+    <p><br>For my design portfolio <a href="https://www.aartics.com" target="_blank"> aartics.com </a>I undertook making a 3D representation of a gallery of my projects, viewed as if in a VR world. The files and code used for developing are available on <a href="https://github.com/aartics/aartics_portfolio" target="_blank">GitHub</a>. These are screenshots of the <a href="../aartics_concept/">wireframe</a> and the current prototype website aartics.com.</p>
     <img src="local_img/readme_screenshot.png" width="60%"/>
   </div>
 
@@ -53,8 +53,7 @@
 
   <div class="image-title" id="beginning">
   Visualizing a three dimensional gallery:
-    <p><br>I started with a grid of hexagons where each hexagon could represent a project, an image or other data. By using a hexagonal grid, I will be able to allow the viewer to extend explorations in 6 directions, instead of the traditional 4.
-</p>
+    <p><br>I started with a grid of hexagons where each hexagon could represent a project, an image or other data. By using a hexagonal grid, I will be able to allow the viewer to extend explorations in 6 directions, instead of the traditional 4.</p>
     <img src="local_img/readme_hexagon.jpg" width="60%"/>
   </div>
 
@@ -66,7 +65,7 @@
 
   <div class="image-title">
   Visualizing a panoramic gallery:
-    <p><br>This enabled me to imagine viewers experiencing equally sized hexagonal tiles in a panoramic dome, and not restricted to traditional rectangular view-boxes (like this web browser we are reading this article on). Viewing from inside the dome (panorama) seemed to limit a user’s view, so I chose to explore viewing from the outside (inverse panorama).
+    <p><br>This enabled me to imagine viewers experiencing equally sized hexagonal tiles in a panoramic dome, and not restricted to traditional rectangular view-boxes (like this web browser we are reading this article on). Viewing from inside the dome (panorama) seemed to limit a user’s view, so I chose to explore viewing from the outside (inverse panorama).</p>
     <img src="local_img/readme_panoramicdome.jpg" width="80%"/>
   </div>
 
@@ -76,7 +75,7 @@
     <img src="local_img/readme_data_heights.jpg" width="60%"/>
   </div>
   <div class="image-title">
-  Visualizing a bird's eye perspective:
+  Visualizing bird's eye perspective:
     <p><br>I proceeded to visualize the panoramic bird’s eye view interface for my website, by working on achieving the right perspective for viewing on a desktop browser.</p>
     <img src="local_img/readme_perspective.jpg" width="60%"/>
   </div> 
@@ -88,7 +87,7 @@
 
   <div class="image-title" id="drawingobjects">
     1. Drawing the objects in perspective location and shadows:
-    <p><br>I made the 3D object representation in SketchUP Make. For the current design, this is a hexagonal columnar grid.</p>
+    <p><br>I made the 3D object representation in SketchUP Make. For the current design, this is a hexagonal column grid.</p>
     <img src="local_img/readme_plan_perspective.jpg" width="60%"/>
     <p><br><br>I exported screenshots of the “bird’s eye view” camera perspective of the model.</p>
     <img src="local_img/0_dotted_xray.jpg" width="60%"/>
@@ -115,7 +114,7 @@
     <img src="local_img/readme_svg.png" width="80%"/>
   </div>
   <div class="image-title">
-  Concept for gallery browser in VR:
+  Concept for gallery browser in VR/MR/AR:
     <p><br>Experience the first edition interactive prototype on <a href="https://www.aartics.com">aartics</a>.</p>
     <img src="local_img/readme_concept.png" width="80%"/>
   </div>
