--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -364,8 +364,8 @@
             <g id="credits_box" data-attach="#c1" class="attached">
                 <polygon id="c1" class="cls-2" points="3292.5 378.97 3143.56 636.95 2845.22 636.57 2695.84 378.78 2845.22 121 3143.56 121 3292.5 378.97"/>
                 <text x="3000" y="270" data-x-rel="-500" id="credits13" class="credits">ARTICLE:</text>
-                <text x="3000" y="295" data-x-rel="-500" id="credits11" class="creditsa"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">prototyping 3D</a></text>
-                <text x="3000" y="315" data-x-rel="-500" id="credits12" class="creditsa"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">in 2D</a></text>
+                <text x="3000" y="295" data-x-rel="-500" id="credits11" class="creditsa"><a href="projects/aartics_story">prototyping 3D</a></text>
+                <text x="3000" y="315" data-x-rel="-500" id="credits12" class="creditsa"><a href="projects/aartics_story">in 2D</a></text>
                 <text x="3000" y="345" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
                 <text x="3000" y="365" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
                 <text x="3000" y="385" data-x-rel="-500" id="credits1" class="credits">-------------------------------------</text>
@@ -375,7 +375,7 @@
                 <text x="3000" y="465" data-x-rel="-470" id="credits5" class="credits">javascript </text>
                 <text x="3000" y="485" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
                 <text x="3000" y="505" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
-                <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to <a href="https://github.com/owings1">@owings1</a></text>
+                <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
                 <text x="3000" y="545" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
                 <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
             </g> 
