improving case study

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -307,10 +307,10 @@
             </clipPath>
                 <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/>
                 <polygon id="_18" data-name="18" class="cls-2 project_box has_link" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
-                <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="https://invis.io/THAEZ03UR">UX CASE STUDY:</a></text>
-                <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="https://invis.io/THAEZ03UR">an online pet</a></text>
-                <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="https://invis.io/THAEZ03UR">store experience</a></text>
-                <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="https://invis.io/THAEZ03UR">wolf &amp; lion</a></text>
+                <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion">UX CASE STUDY:</a></text>
+                <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="projects/wolflion">an online pet</a></text>
+                <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="projects/wolflion">store experience</a></text>
+                <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/wolflion">wolf &amp; lion</a></text>
             </g>
 
             <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
