--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -29,7 +29,7 @@
 </div>
 
 <div id="contents">
-<h2>Content:</h2>
+<h2>Contents:</h2>
   <ul>
     <li><a href="#intro">Project: aartics_portfolio</a></li>
     <li><a href="#visual">Part 1: Spatial Visualizations</a></li>
@@ -40,10 +40,10 @@
 
 <div id="project-content">
 
-  <div class="image-title" id="intro">
+  <div class="image-title" id="bef">
     Project: aartics_portfolio
-    <p><br>For my design portfolio <a href="https://www.aartics.com" target="_blank"> aartics.com </a>I undertook making a 3D representation of a gallery of my projects, viewed as if in a VR world. The files and code used for developing are available on <a href="https://github.com/aartics/aartics_portfolio" target="_blank">GitHub</a>. These are screenshots of the <a href="../aartics_concept/">wireframe</a> and the current prototype website aartics.com.</p>
-    <img src="local_img/readme_screenshot.png" width="60%"/>
+    <p><br>For my design portfolio, <a href="https://www.aartics.com" target="_blank"> aartics.com</a> I undertook making a 3D representation my project gallery, viewed as if in a VR world. The files and code used for developing are available on <a href="https://github.com/aartics/aartics_portfolio" target="_blank">GitHub</a>. These are screenshots of the <a href="../aartics_concept/">wireframe</a> and the current prototype website aartics.com.</p>
+    <!-- <img ="local_img/readme_screenshot.png" width="60%"/> -->
   </div>
 
 <div class="section-title" id="visual">
@@ -53,7 +53,7 @@
 
   <div class="image-title" id="beginning">
   Visualizing a three dimensional gallery:
-    <p><br>I started with a grid of hexagons where each hexagon could represent a project, an image or other data. By using a hexagonal grid, I will be able to allow the viewer to extend explorations in 6 directions, instead of the traditional 4.</p>
+    <p><br>I started imagining a grid of hexagons where each hexagon could contain a project, an image or other data. By using a hexagonal grid, I can allow the viewer to extend explorations in 6 directions, instead of the traditional 4.</p>
     <img src="local_img/readme_hexagon.jpg" width="60%"/>
   </div>
 
