--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -291,7 +291,7 @@
                 <text x="290" y="382" data-x-rel="-435" id="c">c</text>
                 <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
                 <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
-                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + interaction</text>
+                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + product</text>
                 <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
                 <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
                 <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
