--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -297,7 +297,7 @@
                 <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
                 <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf">| &nbsp; &nbsp; resume</a></text>
-                <text x="303" y="675" data-x-rel="-420" id="scrolldown" class="traleway">scroll down to explore</text>
+                <!-- <text x="303" y="675" data-x-rel="-420" id="scrolldown" class="traleway">scroll down to explore</text> -->
 <!--                 <text x="455" y="660" data-x-rel="-268" id="arrow">&#x21E3;<text>
  -->            </g>
 
