--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>aartics</title>
-	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
+    <meta charset="utf-8" />
+    <title>aartics</title>
+    <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--     <script src="js/jquery.jInvertScroll.js"></script> -->
     <link rel="stylesheet" href="css/aartics.css" />
     <link rel="icon" 
       type="image/png" 
       href="favico.png">
 </head>
 <body>
-    <div class="bigheader">
-        <svg id="message" xmlns="http://www.w3.org/2000/svg" width="1300" height="1200">
-            <text class="bigmsg" x="60" y="650">hi! i render best on desktop browsers.</text> 
-            <text class="bigmsg" x="60" y="700">mobile version coming soon.</text> 
-            <text class="bigmsg" x="60" y="750">- aarti c sharma &nbsp;<a href="aartics_resume.pdf">resume &nbsp; |</a><a href="https://www.linkedin.com/in/aartics" target="_blank">&nbsp; linkedin</a></text>
-        </svg>
-    </div>
-    <div class="header">
+<!--     <div class="header">
         <h1>aartics.com</h1>
-    </div>
-    <div class="backgroundgrad"></div>
+    </div> -->
+    <!-- <div class="backgroundgrad"></div> -->
     <div class="horizon scroll">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="3000px" height="760" id="bigsvg">
             <polygon id="k01" class="cls-1" points="2557.5 378.5 2695.5 378.5 2845.5 120.5 2562.5 222.5 2512.5 301.5 2557.5 378.5"/>
@@ -388,7 +380,7 @@
             </defs>                  
         </svg>
     </div>
-	<script src="js/data.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
